; ModuleID = '/home/carl/AnghaBench/tmux/extr_input.c_input_ground.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_input.c_input_ground.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { i64, i32, i32, i32 }

@INPUT_BUF_START = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_ctx*)* @input_ground to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @input_ground(%struct.input_ctx* %0) #0 {
  %2 = alloca %struct.input_ctx*, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %2, align 8
  %3 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %4 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %3, i32 0, i32 3
  %5 = call i32 @event_del(i32* %4)
  %6 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %7 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %10 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @EVBUFFER_LENGTH(i32 %11)
  %13 = call i32 @evbuffer_drain(i32 %8, i32 %12)
  %14 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %15 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @INPUT_BUF_START, align 8
  %18 = icmp sgt i64 %16, %17
  br i1 %18, label %19, label %30

19:                                               ; preds = %1
  %20 = load i64, i64* @INPUT_BUF_START, align 8
  %21 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %22 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  %23 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %24 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = load i64, i64* @INPUT_BUF_START, align 8
  %27 = call i32 @xrealloc(i32 %25, i64 %26)
  %28 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %29 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 8
  br label %30

30:                                               ; preds = %19, %1
  ret void
}

declare dso_local i32 @event_del(i32*) #1

declare dso_local i32 @evbuffer_drain(i32, i32) #1

declare dso_local i32 @EVBUFFER_LENGTH(i32) #1

declare dso_local i32 @xrealloc(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
